Incremented tests module.

--- a/default_shared_dependencies.gradle
+++ b/default_shared_dependencies.gradle
@@ -1,8 +1,37 @@
+apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: 'kotlin-parcelize'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
+android {
+
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
+    hilt {
+        enableAggregatingTask = true
+    }
+}
+
 dependencies {
     def dependencies = rootProject.ext.dependencies
+    api project(':common:shared-tests')
+
     implementation dependencies.material
     implementation dependencies.appCompat
     implementation dependencies.coreKtx
