--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,6 @@ include ':common:ui-components'
 include ':common:resources'
 include ':common:constants'
 include ':common:constants'
+include ':common:shared-tests'
+include ':features:detail'
+include ':common:base'
