--- a/database/build.gradle
+++ b/database/build.gradle
@@ -1,9 +1,4 @@
-plugins {
-    id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
-}
-
-apply from: "$rootDir/shared_dependencies.gradle"
+apply from: "$rootDir/shared_library_dependencies.gradle"
 
 android {
     compileSdk 32
@@ -24,24 +19,10 @@ android {
             }
         }
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
 }
 
 dependencies {
-    implementation project(path: ':common:models')
+    implementation project(':common:models')
     def dependencies = rootProject.ext.dependencies
 
     api dependencies.room
