--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,6 +12,7 @@ ext {
     material_version = '1.6.1'
     junit_version = '4.13.2'
     junitExt_version = '1.1.3'
+    robolectric_version = '4.8'
     espresso_version = '3.4.0'
     constraintLayout_version = '2.1.4'
     coroutines_version = '1.3.9'
@@ -22,6 +23,11 @@ ext {
     swipeRefresh_version = '1.1.0'
     transition_version = '1.4.1'
     hilt_version = '2.42'
+    collectionKtx_version = '1.2.0'
+    fragment_version = '1.5.0'
+    lifecycle_version = '2.5.0-rc01'
+    liveData_version = '2.5.0-rc01'
+    viewModel_version = '2.5.0-rc01'
 
     dependencies = [
             retrofit            : "com.squareup.retrofit2:retrofit:$retrofit_version",
@@ -29,19 +35,12 @@ ext {
             okHttpBom           : "com.squareup.okhttp3:okhttp-bom:$okHttp_version",
             okHttp              : "com.squareup.okhttp3:okhttp:$okHttp_version",
             loggingInterceptor  : "com.squareup.okhttp3:logging-interceptor:$okHttp_version",
-            mockWebServer       : "com.squareup.okhttp3:mockwebserver:$okHttp_version",
             kotlin              : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
             coreKtx             : "androidx.core:core-ktx:$coreKtx_version",
             appCompat           : "androidx.appcompat:appcompat:$appCompat_version",
             material            : "com.google.android.material:material:$material_version",
-            junit               : "junit:junit:$junit_version",
-            junitExt            : "androidx.test.ext:junit:$junitExt_version",
-            espresso            : "androidx.test.espresso:espresso-core:$espresso_version",
             constraintLayout    : "androidx.constraintlayout:constraintlayout:$constraintLayout_version",
             coroutines          : "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version",
-            navigationTest      : "androidx.navigation:navigation-testing:$navigation_version",
-            navigationFragment  : "androidx.navigation:navigation-fragment-ktx:$navigation_version",
-            navigationUI        : "androidx.navigation:navigation-ui-ktx:$navigation_version",
             cardView            : "androidx.cardview:cardview:$cardview_version",
             paging              : "androidx.paging:paging-runtime:$paging_version",
             room                : "androidx.room:room-runtime:$room_version",
@@ -53,14 +52,38 @@ ext {
             hilt                : "com.google.dagger:hilt-android:$hilt_version",
             hiltCompiler        : "com.google.dagger:hilt-android-compiler:$hilt_version",
 
-            collectionKtx       : "androidx.collection:collection-ktx:1.2.0",
-            fragmentKtx         : "androidx.fragment:fragment-ktx:1.4.1",
-            lifecycleKtx        : "androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-rc01",
-            livedataKtx         : "androidx.lifecycle:lifecycle-livedata-ktx:2.5.0-rc01",
-            navigationRuntimeKtx: "androidx.navigation:navigation-runtime-ktx:2.4.2",
-            navigationFragKtx   : "androidx.navigation:navigation-fragment-ktx:2.4.2",
-            navigationUiKtx     : "androidx.navigation:navigation-ui-ktx:2.4.2",
-            viewModelKtx        : "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-rc01",
+            collectionKtx       : "androidx.collection:collection-ktx:$collectionKtx_version",
+            fragmentKtx         : "androidx.fragment:fragment-ktx:$fragment_version",
+            lifecycleKtx        : "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version",
+            livedataKtx         : "androidx.lifecycle:lifecycle-livedata-ktx:$liveData_version",
+            viewModelKtx        : "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewModel_version",
+            navigationRuntimeKtx: "androidx.navigation:navigation-runtime-ktx:$navigation_version",
+            navigationFragKtx   : "androidx.navigation:navigation-fragment-ktx:$navigation_version",
+            navigationUiKtx     : "androidx.navigation:navigation-ui-ktx:$navigation_version",
 
+    ]
+
+
+    acessibility_version = '4.0.0'
+    mockk_version = '1.12.0'
+    truth_version = '1.1.3'
+    rules_version = '1.4.0'
+    leakcanary_version = '2.7'
+
+    test_dependencies = [
+            testCore         : "androidx.test:core:$coreKtx_version",
+            junit            : "junit:junit:$junit_version",
+            junitExt         : "androidx.test.ext:junit:$junitExt_version",
+            robolectric      : "org.robolectric:robolectric:$robolectric_version",
+            espresso         : "androidx.test.espresso:espresso-core:$espresso_version",
+            navigationTest   : "androidx.navigation:navigation-testing:$navigation_version",
+            accessibilityTest: "com.google.android.apps.common.testing.accessibility.framework:accessibility-test-framework:$acessibility_version",
+            coroutinesTest   : "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version",
+            mockk            : "io.mockk:mockk:$mockk_version",
+            truth            : "com.google.truth:truth:$truth_version",
+            rules            : "androidx.test:rules:$rules_version",
+            fragmentTesting  : "androidx.fragment:fragment-testing:$fragment_version",
+            leakcanary       : "com.squareup.leakcanary:leakcanary-android:$leakcanary_version",
+            mockWebServer    : "com.squareup.okhttp3:mockwebserver:$okHttp_version",
     ]
 }
