--- a/features/home/build.gradle
+++ b/features/home/build.gradle
@@ -1,48 +1,8 @@
-plugins {
-    id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
-}
-
-apply from: "$rootDir/shared_dependencies.gradle"
-
-android {
-    compileSdk 32
-
-    defaultConfig {
-        minSdk 21
-        targetSdk 32
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles "consumer-rules.pro"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
-    android {
-        buildFeatures {
-            viewBinding true
-        }
-    }
-}
+apply from: "$rootDir/shared_feature_dependencies.gradle"
 
 dependencies {
     def dependencies = rootProject.ext.dependencies
-    implementation project(':network')
-    implementation project(':database')
-    implementation project(':common:models')
-    implementation project(':common:helper')
 
     implementation dependencies.paging
+    implementation dependencies.swipeRefresh
 }
