--- a/features/home/build.gradle
+++ b/features/home/build.gradle
@@ -5,4 +5,5 @@ dependencies {
 
     implementation dependencies.paging
     implementation dependencies.swipeRefresh
+    implementation dependencies.coil
 }
